index.html edited

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <div id="vcard-front" class="vcard">
                             <div class="row">
                                 <div class="col-sm-12 name">
-                                    <h1>Felipe Schmidt</h1><small class="job-title">Software Developer</small>
+                                    <h1>Felipe de Medeiros Schmidt</h1><small class="job-title">Software Developer</small>
                                 </div>
                             </div>
                             <div class="row">
