--- a/index.html
+++ b/index.html
@@ -26,16 +26,17 @@
                         <div id="vcard-front" class="vcard">
                             <div class="row">
                                 <div class="col-sm-12 name">
-                                    <h1>Felipe de Medeiros Schmidt</h1><small class="job-title">Software Developer</small>
+                                    <h1>Felipe Schmidt</h1><small class="job-title">Solution Architect ServiceNow</small>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-sm-12">
                                     <ul class="pull-right info">
+                                        <li><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:fdmschmidt@inf.ufrgs.br"> felpschmidt@gmail.com</a></li>
                                         <li><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:fdmschmidt@inf.ufrgs.br"> fdmschmidt@inf.ufrgs.br</a></li>
                                         <li><i class="fa fa-github" aria-hidden="true"></i><a href="http://github.com/fmschmidt" target="_blank"> github.com/fmschmidt</a></li>
                                         <li><i class="fa fa-bitbucket" aria-hidden="true"></i><a href="http://bitbucket.org/fmschmidt" target="_blank"> bitbucket.org/fmschmidt</a></li>
-                                        <li><i class="fa fa-linkedin" aria-hidden="true"></i><a href="http://linkedin.com/" target="_blank"> linkedin.com/</a></li>
+                                        <li><i class="fa fa-linkedin" aria-hidden="true"></i><a href="http://linkedin.com/in/felipe-schmidt-66256b85" target="_blank"> linkedin.com/fmschmidt</a></li>
                                     </ul>
                                 </div>
                             </div>
