--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                             <div class="row">
                                 <div class="col-sm-12">
                                     <ul class="pull-right info">
-                                        <li><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:fdmschmidt@inf.ufrgs.br"> felpschmidt@gmail.com</a></li>
-                                        <li><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:fdmschmidt@inf.ufrgs.br"> fdmschmidt@inf.ufrgs.br</a></li>
+                                        <li><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:fdmschmidt@inf.ufrgs.br"> info@felipeschmidt.com</a></li>
+                                        <!--<li><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:fdmschmidt@inf.ufrgs.br"> fdmschmidt@inf.ufrgs.br</a></li>-->
                                         <li><i class="fa fa-github" aria-hidden="true"></i><a href="http://github.com/fmschmidt" target="_blank"> github.com/fmschmidt</a></li>
                                         <li><i class="fa fa-bitbucket" aria-hidden="true"></i><a href="http://bitbucket.org/fmschmidt" target="_blank"> bitbucket.org/fmschmidt</a></li>
                                         <li><i class="fa fa-linkedin" aria-hidden="true"></i><a href="http://linkedin.com/in/felipe-schmidt-66256b85" target="_blank"> linkedin.com/fmschmidt</a></li>
