--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                             <div class="row">
                                 <div class="col-sm-12">
                                     <ul class="pull-right info">
-                                        <li><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:fdmschmidt@inf.ufrgs.br"> info@felipeschmidt.com</a></li>
+                                        <li><i class="fa fa-globe" aria-hidden="true"></i><a href="http://felipeschmidt.com/blog"> Felipe's Blog </a></li>
+                                        <li><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:info@felipeschmidt.com"> info@felipeschmidt.com</a></li>
                                         <!--<li><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:fdmschmidt@inf.ufrgs.br"> fdmschmidt@inf.ufrgs.br</a></li>-->
                                         <li><i class="fa fa-github" aria-hidden="true"></i><a href="http://github.com/fmschmidt" target="_blank"> github.com/fmschmidt</a></li>
                                         <li><i class="fa fa-bitbucket" aria-hidden="true"></i><a href="http://bitbucket.org/fmschmidt" target="_blank"> bitbucket.org/fmschmidt</a></li>
