--- a/index.html
+++ b/index.html
@@ -1,54 +1,167 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <meta charset="UTF-8">
-        <meta name="author" content="Felipe Schmidt (fmschmidt)"/>
-        <meta name="description" content="Personal website for Felipe Schmidt."/>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        
-        <title>Felipe M. Schmidt</title>
-        <link rel="shortcut icon" href="favicon.ico" type="image/png"/>
-        <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css" type="text/css" />
-        <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css" />
-        <link rel="stylesheet" href="css/styles.css" type="text/css" />
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <title>FelipeSchmidt.com</title>
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet">
+        <!-- Fonts CSS-->
+        <link rel="stylesheet" href="css/heading.css">
+        <link rel="stylesheet" href="css/body.css">
     </head>
-    <body>
-        <div class="center">
+    <body id="page-top">
+        <nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
+            <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top">FS</a>
+                <button class="navbar-toggler navbar-toggler-right font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto">
+                        <!--<li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="https://felipeschmidt.com/blog">BLOG</a>
+                        </li>-->
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#skills">SKILLS</a>
+                        </li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">ABOUT</a>
+                        </li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">CONTACT</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <header class="masthead bg-primary text-white text-center">
+            <div class="container d-flex align-items-center flex-column">
+                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="">
+                <!-- Masthead Heading-->
+                <h1 class="masthead-heading mb-0">Felipe Schmidt</h1>
+                <!-- Icon Divider-->
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- Masthead Subheading-->
+                <p class="pre-wrap masthead-subheading font-weight-light mb-0">Dual B.Sc.  Computer Science   <i class="fas fa-arrows-alt-h"></i>   ServiceNow Solution Architect</p>
+            </div>
+        </header>
+        <section class="page-section skills" id="skills">
             <div class="container">
+                <!-- Portfolio Section Heading-->
+                <div class="text-center">
+                    <h2 class="page-section-heading text-secondary mb-0 d-inline-block">SKILLS</h2>
+                </div>
+                <!-- Icon Divider-->
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- Skills Section Content-->
                 <div class="row">
-                    <div class="col-sm-6 col-sm-offset-3">
-                        <div id="vcard-back" class="vcard"></div>
+                    <div class="ml-auto mr-auto">
+                        <p class="pre-wrap lead"><i class="fas fa-tools"></i> Under construction <i class="fas fa-toolbox"></i></p>
+                    </div>
+                    <!--<div class="col-lg-4 ml-auto">
+                        <p class="pre-wrap lead"><i class="fas fa-tools"></i> Under construction <i class="fas fa-toolbox"></i></p>
+                    </div>
+                    <div class="col-lg-4 mr-auto">
+                        <p class="pre-wrap lead"></p>
+                    </div>-->
+                </div>
+            </div>
+        </section>
+        <section class="page-section bg-primary text-white mb-0" id="about">
+            <div class="container">
+                <!-- About Section Heading-->
+                <div class="text-center">
+                    <h2 class="page-section-heading d-inline-block text-white">ABOUT</h2>
+                </div>
+                <!-- Icon Divider-->
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- About Section Content-->
+                <div class="row">
+                    <div class="col-lg-4 ml-auto">
+                        <p class="pre-wrap lead">#ServiceNow #Solutions #ITSM #ITIL #ApplicationDeveloper</p>
+                    </div>
+                    <div class="col-lg-4 mr-auto">
+                        <p class="pre-wrap lead">#JavaScript #AngularJS #BestPractices #SCRUM #Agile</p>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-sm-6 col-sm-offset-3">
-                        <div id="vcard-front" class="vcard">
-                            <div class="row">
-                                <div class="col-sm-12 name">
-                                    <h1>Felipe Schmidt</h1><small class="job-title">Solution Architect ServiceNow</small>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <ul class="pull-right info">
-                                        <li><i class="fa fa-globe" aria-hidden="true"></i><a href="http://felipeschmidt.com/blog"> Felipe's Blog </a></li>
-                                        <li><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:info@felipeschmidt.com"> info@felipeschmidt.com</a></li>
-                                        <!--<li><i class="fa fa-envelope-o" aria-hidden="true"></i><a href="mailto:fdmschmidt@inf.ufrgs.br"> fdmschmidt@inf.ufrgs.br</a></li>-->
-                                        <li><i class="fa fa-github" aria-hidden="true"></i><a href="http://github.com/fmschmidt" target="_blank"> github.com/fmschmidt</a></li>
-                                        <li><i class="fa fa-bitbucket" aria-hidden="true"></i><a href="http://bitbucket.org/fmschmidt" target="_blank"> bitbucket.org/fmschmidt</a></li>
-                                        <li><i class="fa fa-linkedin" aria-hidden="true"></i><a href="http://linkedin.com/in/felipe-schmidt-66256b85" target="_blank"> linkedin.com/fmschmidt</a></li>
-                                    </ul>
-                                </div>
-                            </div>
+            </div>
+        </section>
+        <section class="page-section" id="contact">
+            <div class="container">
+                <!-- Contact Section Heading-->
+                <div class="text-center">
+                    <h2 class="page-section-heading text-secondary d-inline-block mb-0">CONTACT</h2>
+                </div>
+                <!-- Icon Divider-->
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- Contact Section Content-->
+                <div class="row justify-content-center">
+                    <div class="col-lg-4">
+                        <div class="d-flex flex-column align-items-center">
+                            <div class="icon-contact mb-3"><i class="far fa-envelope"></i></div>
+                            <div class="text-muted">Email</div><a class="lead font-weight-bold" href="mailto:info@felipeschmidt.com">info@felipeschmidt.com</a>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        
-        <script type="text/javascript" src="js/jquery.min.js"></script>
-        <script type="text/javascript" src="js/bootstrap.min.js"></script>
-        <script type="text/javascript"> $(function() { $("#vcard-back").height($("#vcard-front").height())}) </script>
+        </section>
+        <footer class="footer text-center">
+            <div class="container">
+                <div class="row">
+                    <!-- Footer Location-->
+                    <div class="col-lg-4 mb-5 mb-lg-0">
+                        <h4 class="mb-4">LOCATION</h4>
+                        <p class="pre-wrap lead mb-0">Germany</p>
+                        <p class="pre-wrap lead mb-0">Brazil</p>
+                    </div>
+                    <!-- Footer Social Icons-->
+                    <div class="col-lg-4 mb-5 mb-lg-0">
+                        <h4 class="mb-4">AROUND THE WEB</h4>
+                        <a class="btn btn-outline-light btn-social mx-1" href="http://linkedin.com/in/felipe-schmidt-66256b85"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="http://github.com/fmschmidt"><i class="fab fa-fw fa-github"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="http://bitbucket.org/fmschmidt"><i class="fab fa-fw fa-bitbucket"></i></a>
+                        <!--<a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-dribbble"></i></a>-->
+                    </div>
+                    <!-- Footer About Text-->
+                    <div class="col-lg-4">
+                        <h4 class="mb-4">WHO AM I</h4>
+                        <p class="pre-wrap lead mb-0">Passionate, dedicated and open-minded <i>coder</i> & <i>solutioner</i> always aiming the best-fit solution for you.</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+        <!-- Copyright Section-->
+        <section class="copyright py-4 text-center text-white">
+            <div class="container"><small class="pre-wrap">Copyright © Felipe Schmidt 2021  </small></div>
+            <div class="container"><small class="pre-wrap">Template by <a target="_blank" href="https://github.com/startbootstrap/startbootstrap-freelancer">Start Bootstrap LLC</a></div></small></div>
+        </section>
+        <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
+        <div class="scroll-to-top d-lg-none position-fixed"><a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a></div>
+        <!-- Bootstrap core JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+        <!-- Third party plugin JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        <!-- Contact form JS-->
+        <script src="assets/mail/jqBootstrapValidation.js"></script>
+        <script src="assets/mail/contact_me.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
     </body>
 </html>
