Landing - new picture added

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </nav>
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
-                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="">
+                <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/avatar_fs.PNG" alt="">
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading mb-0">Felipe Schmidt</h1>
                 <!-- Icon Divider-->
